standard/standard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: standard
  labels:
    name: standard
