standard/fastapi.yaml
# This manifest contains fastapi app that deploys an FastAPI app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: standard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-app
        image: tandiand/kubernetes-fastapi
        imagePullPolicy: "Always"
        ports: 
        - containerPort: 5000 #port: is the abstracted Service port, which can be any port other pods use to access the Service)
          name: fastapi-svc
---
apiVersion: v1
kind: Service
metadata: 
  name: fastapi-service
  labels:
    app: fastapi
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: fastapi-svc
      nodePort: 31000
