standard/pgadmin.yaml
# This is pgadmin witch allows to interact with postgres
# pgAdmin 4 is a web based administration tool for the PostgreSQL database. 
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: pgadmin
  namespace: standard
  labels: 
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels: #label of pod
        app: pgadmin
    # The Pod template's specification, or .template.spec field, 
    # indicates that the Pods run one container,
    spec:
      containers:
      - name:  pgadmin
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
      #env variables required to use pgadmin
---
# pgadmin external service
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin
  type: ClusterIP  #type of service assigns service an external IP address and so accepts external requests
  ports:
    - protocol: TCP
      port: 80
  #     targetPort: 80
  #     nodePort: 30080
