standard/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
    tier: backend
  ports:
  - port: 5432 #allow to expose service port
    protocol: TCP
    targetPort: 5432 #container port
